Fix z-index stacking on callgraph page.

--- a/webroot/css/xhgui.css
+++ b/webroot/css/xhgui.css
@@ -311,7 +311,7 @@ tr .no-results {
     position: fixed;
     top: 0;
     left: -50%;
-    z-index: 100;
+    z-index: 1020;
     background: #fff;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.5);
     transition: left 0.25s ease-out;
